Fix uploads, assign default info to new packages.
